# SpesEngine

./: .gitmodules  CmakeLists.txt  README.md
SpesEngineCore/: CMakeLists.txt  CmakeLists.txt
SpesEngineCore/includes/Mathemathics/: mat4_float.h  some_func.h  vec3_float.h
SpesEngineCore/includes/SpesEngineCore/: Application.h  Camera.h  Events.h  EventsData.h  ShaderProgram.h  Window.h  test.h
SpesEngineCore/src/Mathemathics/: mat4_float.c  some_func.c  vec3_float.c
SpesEngineCore/src/SpesEngineCore/: Application.c  Camera.c  Camera.cpp  Events.c  ShaderProgram.c  Window.c
SpesEngineEditor/: CmakeLists.txt
SpesEngineEditor/src/: main.c
res/: main.glslf  main.glslv
